# node-falcon

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  makeTSNode.sh  package-lock.json  package.json  ts-install.sh
.circleci/: config.yml
addon/: addons.txt
dep/: CMakeLists.txt
dep/common/: CMakeLists.txt
dep/falcon-1024/: CMakeLists.txt  META.yml
dep/falcon-1024/clean/: CMakeLists.txt  Makefile  Makefile.Microsoft_nmake  api.h  codec.c  common.c  fpr.h  inner.h  sign.c
dep/falcon-1024/src/: Makefile  keygen.c  pqclean.c  rng.c
docs/: README.md  globals.md
docs/classes/: _index_.falcon1024.md
docs/interfaces/: _index_.keys.md
docs/modules/: _index_.md
lib/: falcon1024.d.ts  falcon1024.node  index.d.ts  index.d.ts.map  index.js  index.js.map  node-falcon.d.ts  node-falcon.node
readmeHeader/: readhead.md
script/: clean.js  move.js
src/: CMakeLists.txt  falcon1024.cc  falcon1024.h  index.ts
test/: test.js
